client/src/Components/common/AlgaehmainPage/AlgaehmainPage.scss
@import "../../../styles/algaehCssVariables.scss"; /* width */
header {
  box-shadow: none !important;
  border-bottom: 2px solid rgba(0, 0, 0, 0.1);
}
.mainTheme {
  background: $primary-color;
  color: #fff;
  padding: 0 1rem;
  border-bottom: 1px solid darken($primary-color, 10%);
  height: 52px;
}
.mainPageArea {
  position: fixed;
  top: 52px;
  height: 94vh;
  overflow: auto;
  overflow-x: hidden;
  background-color: #e9e9e9;
}
.sideMenuBars {
  border-right: 1px solid lighten($primary-color, 10%);
  margin-left: -15px;
  padding: 15px;
  cursor: pointer;
  background: linear-gradient(
    to right,
    rgba(228, 171, 89, 0.76) 0%,
    rgba(0, 186, 190, 0.1) 100%
  );
  &:hover {
    background: lighten($primary-color, 10%);
  }
}

.sideBackButton {
  border-right: 1px solid lighten($primary-color, 10%);
  margin-left: -15px;
  padding: 15px;
  cursor: pointer;
  background: linear-gradient(
    to right,
    rgba(0, 186, 190, 1) 0%,
    rgba(228, 171, 89, 1) 100%
  );

  position: absolute;
  z-index: 9;
  &:hover {
    background: lighten($primary-color, 10%);
  }
}
.topNavbar-title {
  margin: 0;
  padding: 0;
  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
  font-size: 1.1em;
  width: 50vw;
  text-overflow: ellipsis;
  height: 52px;
  white-space: nowrap;
  overflow: hidden;
  line-height: 52px;
  color: $color-white;
}
.appLogoCntr {
  border-left: 1px solid darken($primary-color, 10%);
  padding-left: 3px;
  margin-right: 4px;

  .appLogoOnly {
    background: url(../../../assets/svg/algaeh_small_icon.svg) no-repeat center
      left;
    background-size: contain;
    width: auto;
    margin: 0;
    padding: 6px 0 0 50px;
    height: 40px;
    font-size: 1.5rem;
    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
    font-weight: bold;
  }
}

.btn-userProfile {
  background: none;

  color: #fff;
  border-left: 1px solid lighten($primary-color, 10%);
  margin-top: -21px;
  i {
    margin: 3px;
  }

  span {
    display: inline-block;
    margin: 0 10px;
  }
}
#simple-menu {
  top: 33px;
  right: 20px;
  color: #797979;
  ul {
    li {
      padding: 5px 35px 5px 15px;
      margin: 0;
      text-transform: uppercase;

      i {
        margin-right: 15px;
        color: $primary-color;
      }
    }
  }
  hr {
    margin: 5px 0;
    padding: 0;
  }
}
.leftDrawer {
  z-index: 9999;
}
.leftNavCntr {
  background: #292929;
  margin-top: 0;
  z-index: 9999;
  position: fixed;
  height: 100%;
  width: 255px;
  box-shadow: 0 0 300px rgba(0, 0, 0, 0.5);
  animation-duration: 0.4s;
  left: 0;
}

/* Light Side Bar Menu */
.hptl-phase1-sideMenuBar {
  .sideMenu-header {
    color: #212529;
    background: #f7f7f7;
    margin-top: 28px;
    height: 93vh;
    overflow-y: auto;
    overflow-x: hidden;
    .menuBarLoader {
      position: absolute;
      height: 100%;
      background: rgb(233, 233, 233);
      width: 100%;
      z-index: 9;
      text-align: center;
      padding-top: 100%;
      i {
        color: #00babe;
      }
    }
    .moduleNameText {
      font-size: 0.95rem;
    }
  }
  .side-menu-title {
    padding: 5px 0;
    line-height: 35px;
    border-bottom: 2px solid #d2d2d2;
    border-top: 1px solid #fff;
    cursor: pointer;

    top: 0;
    i {
      text-shadow: 0px 2px 0px #fff;
    }
  }
  .side-menu-title:hover {
    background: #fff;
    color: lighten($primary-color, 10%);
  }
  .side-menu-arrow {
    margin-top: 5px;
  }
  .side-menu-downIcon {
    padding-top: 5px;
    padding-right: 5px;
    cursor: pointer;
  }
  .sub-menu-option {
    border-top: 2px solid #f7f7f7;
    ul.tree-structure-menu {
      margin: 0;
      padding: 0;
      width: 100%;
      li {
        margin: 0;

        border-bottom: 1px dotted #818588;
        text-transform: uppercase;
        cursor: pointer;
        line-height: 20px;
        background: #929292;
        color: #ffffff;

        i {
          margin-right: 14px;
          margin-left: 15px;
          display: inline-block;
          vertical-align: initial;
          color: #c1c1c1;
        }
        span {
          padding: 8px 5px 8px 13px;
          display: inline-block;
          width: 78%;
          border-left: 1px solid #f7f7f7;
          font-size: 0.8em;
        }
        &:hover {
          background: #afafaf;
          i {
            color: #fff;
          }
        }
        &.active {
          background: lighten($primary-color, 10%);
          color: #fff;
          i {
            color: #fff;
          }
        }
      }
    }
  }
  .close-menu {
    padding-top: 5px;
    cursor: pointer;
    color: #fff;
  }

  .menuBar-title {
    display: flex;
    padding: 0 5px;

    height: 52px;
    background: #000;
    top: 0;
    position: fixed;
    width: 255px;
    z-index: 9;
    border-bottom: 1px solid #3e3e3e;
  }
  .sideBarClose {
    position: absolute;
    right: 19px;
    top: 14px;
    color: #fff;
    font-size: 1.5em;
  }
  .sideBarClose:hover {
    color: #00bcb0;
    cursor: pointer;
  }
  svg {
    height: 23px;
  }
}

/* Dark Side Bar Menu 
.hptl-phase1-sideMenuBar {
  .sideMenu-header {
    color: white;
    background: #292929;
    margin-top: 52px;
    height: 93vh;
    height: 93vh;
    overflow-y: auto;
    overflow-x: hidden;
  }
  .side-menu-title {
    padding: 5px 0;
    line-height: 35px;
    border-bottom: 2px solid #000000;
    border-top: 1px solid #505050;
    cursor: pointer;
    
    i {
      text-shadow: 0px 2px 0px #000;
    }
  }
  .side-menu-title:hover {
    background:  lighten($primary-color, 10%);
    i {
      text-shadow: 0px 2px 0px #000;
    }
  }
  .side-menu-arrow {
    margin-top: 5px;
  }
  .side-menu-downIcon {
    padding-top: 5px;
    padding-right: 5px;
    cursor: pointer;
  }
  ul.tree-structure-menu {
    margin: 0;
    padding: 0;
    width: 100%;
    li {
      padding: 8px 5px;
      margin: 0;
      
      border-bottom: 1px dotted #4e4e4e;
      text-transform: uppercase;
      cursor: pointer;
      color: #dcac66;
      line-height: 20px;
      i {
        margin-right: 12px;
        margin-left: 14px;
        display: inline-block;
        vertical-align: initial;
      }
      span {
        display: inline-block;
        width: 80%;
      }
    }
    li:hover {
      background:  lighten($primary-color, 10%);
      color: #fff;
    }

    li.active {
      background:  lighten($primary-color, 10%);
      color: #fff;
    }
  }
  .sub-menu-option {
    background: #000000;
  }

  .close-menu {
    padding-top: 5px;
    cursor: pointer;
    color: #fff;
  }

  .menuBar-title {
    display: flex;
    
    height: 49px;
    background: #000;
    position: fixed;
    width: 255px;
    top:0;
    z-index: 9;
  }
  .sideBarClose {
    position: absolute;
    right: 19px;
    top: 14px;
    color: #fff;
    
  }
  .sideBarClose:hover {
    color: #00bcb0;
    cursor: pointer;
  }
  svg {
    height: 23px;
  }
}
*/
.screenDisplay {
  display: flex;
  width: 100%;
  i {
    border-left: 1px solid rgba(0, 0, 0, 0.12);
    border-right: 1px solid rgba(0, 0, 0, 0.12);
    padding-left: 10px;
    padding-right: 10px;
    padding-top: 13px;
    margin: -2px 10px -2px 0;
    &:hover {
      background: rgba(0, 0, 0, 0.1);
      cursor: pointer;
    }
  }
  h5 {
    line-height: 46px;
    padding: 0;
    margin: 0;

    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
  }
  span:first-child {
    padding-top: 0px;
  }
  span:last-child {
    padding-top: 7px;
    float: right;
    position: absolute;
    margin-left: 88%;
  }
}
.selectedLang {
  float: right;

  margin-right: 10px;
  border: 1px solid #fff;
  padding: 0px 3px;
  border-radius: 2px;
}
.navTopbar-dropdown {
  padding: 15px;
  border: 0;
  border-left: 1px solid darken($primary-color, 10%);
  margin: 0;
  margin-right: -15px;
  background: $primary-color;
  cursor: pointer;

  .dropdown-menu {
    left: inherit;
    right: -1px;
    display: none;
    border-radius: 0 0 5px 5px;
    top: 49px;
    width: 200px;
    .dropdown-item {
      padding: 0.5rem 0.8rem;
      color: #686868;
      i {
        margin-right: 0.5rem;
      }
      &:hover {
        color: lighten($primary-color, 10%);
      }
    }
  }
  &:hover {
    background: lighten($primary-color, 10%);
    .dropdown-menu {
      display: block;
    }
  }
  &:disabled {
    background: lighten($primary-color, 10%);
  }
}
.loginProfileInfo {
  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
  text-align: right;
  span {
    display: block;
    white-space: nowrap;
    margin-right: 10px;
    // border-left: 1px solid #009989;
    padding-left: 10px;
    &:first-child {
      font-weight: 600;
      text-transform: uppercase;
    }
  }
}
.passwordCntr {
  background: $color-white;
  padding: 0 15px 15px;
  border-radius: 5px;
  width: 300px;
  margin: 10vh auto 0;
  box-shadow: 0 10px 10px lighten($color-black, 60%) !important;
  position: absolute;
  z-index: 99999;
  border: 1px solid lighten($color-black, 40%) !important;
  left: 35vw;
  top: 15vh;
  // display: none;
  h4 {
    border-bottom: 1px solid darken($primary-color, 20%) !important;
    padding-bottom: 15px;
    width: 100%;
    background: $primary-color;
    line-height: 40px;
    height: 42px;
    color: $color-white;
    text-transform: uppercase;
    text-shadow: 0 1px 1px darken ($primary-color, 20%) !important;
    text-align: center;
  }
  .footerBtn {
    button {
      float: right;
      margin-left: 15px;
    }
  }
}
@media only screen and (max-width: 600px) {
  .navTopBarRight {
    display: none;
  }
  .topNavbar-title {
    width: 1vw;
  }
}
.faltRed {
  border: 1px solid red !important;
}

